--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "@react-hook/window-size": "^3.1.1",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
